fix: Resolve 6 critical security vulnerabilities in REST API
Addressed all blocking security issues identified in code review:

1. Password Hash Exposure (OnlineProfile.java)
   - Added @JsonIgnore to getPasswordHash() method
   - Prevents password hashes from being exposed in API responses

2. Weak JWT Secret (application.properties, JwtTokenProvider.java)
   - Removed default JWT secret value
   - Added @PostConstruct validation requiring JWT_SECRET env var
   - Enforces minimum 32 character (256-bit) secret length

3. CSRF Protection (AuthController.java)
   - Added SameSite=Strict to all JWT cookies
   - Uses ResponseCookie instead of Cookie for proper attribute support
   - Protects against CSRF attacks while maintaining stateless JWT

4. Broken Auth Endpoint (AuthController.java)
   - Fixed GET /api/auth/me to use @AuthenticationPrincipal
   - Previously used @RequestAttribute which was never set
   - Endpoint now correctly returns authenticated user info

5. CORS Security (SecurityConfig.java, application.properties)
   - Replaced allowedOriginPatterns("*") with specific origins
   - Made CORS origins configurable via CORS_ALLOWED_ORIGINS env var
   - Default: http://localhost:3000,https://www.ddpoker.com
   - Prevents unauthorized cross-origin requests

6. Path Traversal (DownloadController.java)
   - Fixed string-based path comparison to use Path.startsWith()
   - Properly normalizes and validates download paths
   - Prevents directory traversal attacks

Review: .claude/reviews/feature-website-modernization.md

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>